--- a/basic.html
+++ b/basic.html
@@ -30,13 +30,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/CodeWithBootstrap/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/basic.html">Basic of bootstrap</a>
+                  <a class="nav-link" href="/CodeWithBootstrap/basic.html">Basic of bootstrap</a>
               </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/about.html">About</a>
+                    <a class="nav-link" href="/CodeWithBootstrap/about.html">About</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -49,7 +49,7 @@
                         <a class="dropdown-item" href="https://www.geeksforgeeks.org/roadmap-to-become-a-web-developer-in-2022/">Web Development Roadmap</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Support</a>
-                        <a class="dropdown-item" href="/contact.html">Write for us</a>
+                        <a class="dropdown-item" href="/CodeWithBootstrap/contact.html">Write for us</a>
                     </div>
                 </li>
                 <li class="nav-item">
