--- a/about.html
+++ b/about.html
@@ -24,13 +24,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/CodeWithBootstrap/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/basic.html">Basic of bootstrap</a>
+                    <a class="nav-link" href="/CodeWithBootstrap/basic.html">Basic of bootstrap</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/about.html">About</a>
+                    <a class="nav-link" href="/CodeWithBootstrap/about.html">About</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -45,9 +45,9 @@
                         <a class="dropdown-item" href="#">Support</a>
                         <a class="dropdown-item" href="/contact.html">Write for us</a>
                     </div>
-                </li>
+  
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact.html">Contact Us</a>
+                    <a class="nav-link" href="/CodeWithBootstrap/contact.html">Contact Us</a>
                 </li>
 
 
