--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                         <a class="dropdown-item" href="https://www.geeksforgeeks.org/roadmap-to-become-a-web-developer-in-2022/">Web Development Roadmap</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Support</a>
-                        <a class="dropdown-item" href="/contact.html">Write for us</a>
+                        <a class="dropdown-item" href="/CodeWithBootstrap/contact.html">Write for us</a>
                     </div>
   
                 <li class="nav-item">
